--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,6 +128,17 @@
         </activity>
 
         <activity
+            android:name=".ViewAssignmentsInOneCourseActivity"
+            android:label="Grade Tracker_pj1"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".ViewGradeActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
